# TreeProject

./: README.md
c++/: CMakeLists.txt  LICENSE  README.md  build.sh  rocks.sh  trees.sh
c++/cmake/: Utilities.cmake
c++/include/: common.h  mainwindow.h  my_widgets.h  obj_ident_app.h  obj_ident_config.h.in  settings_dialog.h
c++/include/clany/: algorithm.hpp  cls_defs.h  factory.hpp  file_operation.hpp  timer.hpp  traits.hpp
c++/include/core/: color_hist.h  deep_overfeat.h  dist_learning.h  fourier_hist.h  gist.h  hough_hist.h  img_descriptor.h  img_feature.h  knn.h  obj_ident.h  svm.h
c++/src/: CMakeLists.txt  Makefile  ObjIdent_automoc.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  moc_mainwindow.cpp  moc_my_widgets.cpp  moc_settings_dialog.cpp  my_widgets.cpp  obj_ident_app.cpp  settings_dialog.cpp  settings_dialog.ui  ui_mainwindow.h  ui_settings_dialog.h
c++/src/core/: color_hist.cpp  deep_overfeat.cpp  dist_learning.cpp  fourier_hist.cpp  gist.cpp  hough_hist.cpp  img_descriptor.cpp  knn.cpp  obj_ident.cpp  svm.cpp
data/: crop19_5withheld.mat
data-rocks/HumanExperiments/Test/1/alluvium/: .picasa.ini
data-rocks/HumanExperiments/Test/1/andesite/: .picasa.ini
data-rocks/HumanExperiments/Test/1/basalt/: .picasa.ini
data-rocks/HumanExperiments/Test/1/canyon/: .picasa.ini
data-rocks/HumanExperiments/Test/1/hydrothermal/: .picasa.ini
data-rocks/HumanExperiments/Test/1/layer/: .picasa.ini
data-rocks/HumanExperiments/Test/1/metamorphic/: .picasa.ini
data-rocks/HumanExperiments/Test/1/pinnacles/: .picasa.ini
data-rocks/HumanExperiments/Test/1/playa/: .picasa.ini
data-rocks/HumanExperiments/Train/1/dunes/: .picasa.ini
data-rocks/HumanExperiments/Train/1/granite/: .picasa.ini
data-rocks/HumanExperiments/Train/1/limestone/: .picasa.ini
data-rocks/HumanExperiments/Train/1/mesa/: .picasa.ini
data-rocks/HumanExperiments/Train/1/rhyolite/: .picasa.ini
data-rocks/HumanExperiments/Train/1/sandstone/: .picasa.ini
data-rocks/HumanExperiments/Train/1/shale/: .picasa.ini
data/HumanExperiments/: Human Set  human_train.mat
data/HumanExperiments/Train/: svm_set_0  svm_set_1  svm_set_2  svm_set_3  svm_set_4  train_features.xml
